--- a/RwaApartmaniDataLayer/RwaApartmaniDataLayer.csproj
+++ b/RwaApartmaniDataLayer/RwaApartmaniDataLayer.csproj
@@ -48,7 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="DataManager.cs" />
     <Compile Include="Models\Apartment.cs" />
     <Compile Include="Models\ApartmentOwner.cs" />
     <Compile Include="Models\ApartmentPicture.cs" />
@@ -61,9 +61,10 @@
     <Compile Include="Models\TagType.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\Interfaces\Irepo.cs" />
+    <Compile Include="Repositories\Interfaces\IRepo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Repositories\Abstracts\" />
     <Folder Include="Repositories\Factories\" />
     <Folder Include="Repositories\Implementations\" />
   </ItemGroup>
