--- a/RwaApartmaniDataLayer/RwaApartmaniDataLayer.csproj
+++ b/RwaApartmaniDataLayer/RwaApartmaniDataLayer.csproj
@@ -39,6 +39,7 @@
       <HintPath>..\packages\System.ComponentModel.Annotations.5.0.0\lib\net461\System.ComponentModel.Annotations.dll</HintPath>
     </Reference>
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -61,10 +62,10 @@
     <Compile Include="Models\TagType.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\Abstracts\AbstractDBRepo.cs" />
     <Compile Include="Repositories\Interfaces\IRepo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Repositories\Abstracts\" />
     <Folder Include="Repositories\Factories\" />
     <Folder Include="Repositories\Implementations\" />
   </ItemGroup>
