--- a/RwaApartmaniDataLayer/RwaApartmaniDataLayer.csproj
+++ b/RwaApartmaniDataLayer/RwaApartmaniDataLayer.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Abstracts\AbstractDBRepo.cs" />
     <Compile Include="Repositories\Interfaces\IRepo.cs" />
+    <Compile Include="Utilities\Parsers.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Repositories\Factories\" />
