Styling changes on apartments page

--- a/Zadatak01 - Copy/RwaApartmani-Admin.csproj
+++ b/Zadatak01 - Copy/RwaApartmani-Admin.csproj
@@ -104,6 +104,7 @@
     <Content Include="Dashboard.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="Global.asax" />
+    <Content Include="Images\apartment.png" />
     <Content Include="Registration.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
