--- a/Zadatak01 - Copy/RwaApartmani-Admin.csproj
+++ b/Zadatak01 - Copy/RwaApartmani-Admin.csproj
@@ -121,6 +121,7 @@
     <Content Include="Scripts\jquery-3.6.0.slim.min.js" />
     <Content Include="Settings.aspx" />
     <Content Include="Tags.aspx" />
+    <Content Include="UserControls\EditApartmentControl.ascx" />
     <Content Include="Users.aspx" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
@@ -204,6 +205,13 @@
     </Compile>
     <Compile Include="Tags.aspx.designer.cs">
       <DependentUpon>Tags.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\EditApartmentControl.ascx.cs">
+      <DependentUpon>EditApartmentControl.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="UserControls\EditApartmentControl.ascx.designer.cs">
+      <DependentUpon>EditApartmentControl.ascx</DependentUpon>
     </Compile>
     <Compile Include="Users.aspx.cs">
       <DependentUpon>Users.aspx</DependentUpon>
