--- a/Zadatak01 - Copy/RwaApartmani-Admin.csproj
+++ b/Zadatak01 - Copy/RwaApartmani-Admin.csproj
@@ -295,6 +295,7 @@
   <ItemGroup>
     <Content Include="App_LocalResources\Settings.aspx.hr.resx" />
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
