--- a/RwaApartmaniDataLayer/packages.config
+++ b/RwaApartmaniDataLayer/packages.config
@@ -1,5 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.ApplicationBlocks.Data" version="2.0.0" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.3" targetFramework="net48" />
+  <package id="Microsoft.Owin" version="4.2.2" targetFramework="net48" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.2" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security" version="4.2.2" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security.Cookies" version="4.2.2" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net48" />
+  <package id="Owin" version="1.0" targetFramework="net48" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net48" />
 </packages>
