--- a/Zadatak01 - Copy/RwaApartments-Admin.csproj
+++ b/Zadatak01 - Copy/RwaApartments-Admin.csproj
@@ -261,9 +261,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\RwaApartmaniDataLayer\RwaApartmaniDataLayer.csproj">
+    <ProjectReference Include="..\RwaApartmaniDataLayer\RwaApartments-DataLayer.csproj">
       <Project>{a026f10b-ffd7-4d3b-9787-bb536c87b26c}</Project>
-      <Name>RwaApartmaniDataLayer</Name>
+      <Name>RwaApartments-DataLayer</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
