--- a/RwaApartments-Public/Web.config
+++ b/RwaApartments-Public/Web.config
@@ -14,6 +14,9 @@
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
   </system.web>
+	<connectionStrings>
+		<add name="apartments" connectionString="Server=.;Database=RwaApartmani;Uid=sas;Pwd=SQL" />
+	</connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
