--- a/RwaApartments-Public/RwaApartments-Public.csproj
+++ b/RwaApartments-Public/RwaApartments-Public.csproj
@@ -143,6 +143,7 @@
     <Content Include="Content\bootstrap.rtl.min.css" />
     <Content Include="Content\custom-styling.css" />
     <Content Include="Content\images\apartment.png" />
+    <Content Include="Content\images\location.png" />
     <Content Include="Content\images\ui-icons_444444_256x240.png" />
     <Content Include="Content\images\ui-icons_555555_256x240.png" />
     <Content Include="Content\images\ui-icons_777620_256x240.png" />
@@ -220,6 +221,7 @@
     <Content Include="Scripts\jquery-3.6.0.slim.min.map" />
     <Content Include="Scripts\jquery-3.6.0.min.map" />
     <Content Include="Views\Shared\_ApartmentInListView.cshtml" />
+    <Content Include="Views\Shared\_PriceView.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
