--- a/RwaApartments-Public/packages.config
+++ b/RwaApartments-Public/packages.config
@@ -22,5 +22,6 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net48" />
   <package id="Owin" version="1.0" targetFramework="net48" />
+  <package id="routedebugger" version="2.1.5" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
 </packages>
