--- a/RwaApartments-Public/RwaApartments-Public.csproj
+++ b/RwaApartments-Public/RwaApartments-Public.csproj
@@ -149,6 +149,7 @@
     <Content Include="Content\images\bed.png" />
     <Content Include="Content\images\location.png" />
     <Content Include="Content\images\sea.png" />
+    <Content Include="Content\images\search.png" />
     <Content Include="Content\images\ui-icons_444444_256x240.png" />
     <Content Include="Content\images\ui-icons_555555_256x240.png" />
     <Content Include="Content\images\ui-icons_777620_256x240.png" />
@@ -187,6 +188,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.cs" />
     <Compile Include="Controllers\ApartmentsController.cs" />
+    <Compile Include="Controllers\Api\AjaxController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -241,6 +243,7 @@
     <Folder Include="App_Data\" />
     <Folder Include="Models\CustomHtmlHelpers\" />
     <Folder Include="Models\CustomValidators\" />
+    <Folder Include="Views\Ajax\" />
     <Folder Include="Views\Home\" />
   </ItemGroup>
   <ItemGroup>
