--- a/DebugApp/App.config
+++ b/DebugApp/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
+	<connectionStrings>
+		<add name="apartments" connectionString="Server=.;Database=RwaApartmani;Uid=sas;Pwd=SQL" />
+	</connectionStrings>
 </configuration>
