--- a/RwaApartments-Public/packages.config
+++ b/RwaApartments-Public/packages.config
@@ -20,8 +20,9 @@
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
   <package id="Owin" version="1.0" targetFramework="net48" />
+  <package id="RecaptchaNet" version="3.1.0" targetFramework="net48" />
   <package id="routedebugger" version="2.1.5" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
 </packages>
