--- a/RwaApartments-Public/RwaApartments-Public.csproj
+++ b/RwaApartments-Public/RwaApartments-Public.csproj
@@ -218,7 +218,6 @@
     <Compile Include="Models\ViewModels\LoginViewModel.cs" />
     <Compile Include="Models\ViewModels\StarsViewModel.cs" />
     <Compile Include="Models\ViewModels\ViewApartmentViewModel.cs" />
-    <Compile Include="Models\ViewModels\ViewUserViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -260,6 +259,7 @@
     <Content Include="Views\Shared\_TagViewLight.cshtml" />
     <Content Include="Views\Shared\_ReviewListView.cshtml" />
     <Content Include="Views\Apartments\Index.cshtml" />
+    <Content Include="Views\Apartments\ViewUser.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
