--- a/RwaApartments-Public/RwaApartments-Public.csproj
+++ b/RwaApartments-Public/RwaApartments-Public.csproj
@@ -154,6 +154,7 @@
     <Content Include="Content\images\child.png" />
     <Content Include="Content\images\location.png" />
     <Content Include="Content\images\location_red.png" />
+    <Content Include="Content\images\nocando.jpg" />
     <Content Include="Content\images\room.png" />
     <Content Include="Content\images\sea.png" />
     <Content Include="Content\images\search.png" />
@@ -203,6 +204,7 @@
     <Compile Include="App_Start\Startup.cs" />
     <Compile Include="Controllers\ApartmentsController.cs" />
     <Compile Include="Controllers\Api\AjaxController.cs" />
+    <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -260,6 +262,7 @@
     <Content Include="Views\Shared\_ReviewListView.cshtml" />
     <Content Include="Views\Apartments\Index.cshtml" />
     <Content Include="Views\Apartments\ViewUser.cshtml" />
+    <Content Include="Views\Error\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
