--- a/RwaApartments-Public/RwaApartments-Public.csproj
+++ b/RwaApartments-Public/RwaApartments-Public.csproj
@@ -278,7 +278,7 @@
     <Folder Include="Views\Home\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\RwaApartmaniDataLayer\RwaApartments-DataLayer.csproj">
+    <ProjectReference Include="..\RwaApartments-DataLayer\RwaApartments-DataLayer.csproj">
       <Project>{a026f10b-ffd7-4d3b-9787-bb536c87b26c}</Project>
       <Name>RwaApartments-DataLayer</Name>
     </ProjectReference>
