Added error page for Admin app

--- a/RwaApartments-Admin/RwaApartments-Admin.csproj
+++ b/RwaApartments-Admin/RwaApartments-Admin.csproj
@@ -123,8 +123,10 @@
     <Content Include="Content\bootstrap.rtl.min.css" />
     <Content Include="Dashboard.aspx" />
     <Content Include="Default.aspx" />
+    <Content Include="Error.aspx" />
     <Content Include="Global.asax" />
     <Content Include="Images\apartment.png" />
+    <Content Include="Images\nocando.jpg" />
     <Content Include="Images\save.png" />
     <Content Include="RecaptchaNet.Readme.txt" />
     <Content Include="Scripts\bootstrap.bundle.js" />
@@ -183,6 +185,13 @@
     </Compile>
     <Compile Include="App_Code\DefaultPage.cs">
       <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Error.aspx.cs">
+      <DependentUpon>Error.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Error.aspx.designer.cs">
+      <DependentUpon>Error.aspx</DependentUpon>
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
