--- a/RwaApartments-Admin/Web.config
+++ b/RwaApartments-Admin/Web.config
@@ -25,7 +25,7 @@
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.2.2.0" newVersion="4.2.2.0" />
       </dependentAssembly>
-      <dependentAssembly>
+      <dependentAssembly>    
         <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.2.2.0" newVersion="4.2.2.0" />
       </dependentAssembly>
@@ -60,5 +60,17 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+	  <httpErrors errorMode="Custom">
+		  <remove statusCode="400"/>
+		  <error statusCode="400" path="/Error.aspx" responseMode="ExecuteURL"/>
+		  <remove statusCode="401"/>
+		  <error statusCode="401" path="/Error.aspx" responseMode="ExecuteURL"/>
+		  <remove statusCode="402"/>
+		  <error statusCode="402" path="/Error.aspx" responseMode="ExecuteURL"/>
+		  <remove statusCode="404"/>
+		  <error statusCode="404" path="/Error.aspx" responseMode="ExecuteURL"/>
+		  <remove statusCode="500"/>
+		  <error statusCode="500" path="/Error.aspx" responseMode="ExecuteURL"/>
+	  </httpErrors>
   </system.webServer>
 </configuration>
